; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_commit.c_commit_index_files.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_commit.c_commit_index_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@commit_style = common dso_local global i32 0, align 4
@index_lock = common dso_local global i32 0, align 4
@false_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @commit_index_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @commit_index_files() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @commit_style, align 4
  switch i32 %2, label %9 [
    i32 130, label %3
    i32 129, label %4
    i32 128, label %6
  ]

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = call i32 @commit_lock_file(i32* @index_lock)
  store i32 %5, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = call i32 @commit_lock_file(i32* @index_lock)
  store i32 %7, i32* %1, align 4
  %8 = call i32 @rollback_lock_file(i32* @false_lock)
  br label %9

9:                                                ; preds = %0, %6, %4, %3
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @commit_lock_file(i32*) #1

declare dso_local i32 @rollback_lock_file(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
